--- a/services/www/static/index.html
+++ b/services/www/static/index.html
@@ -7,32 +7,94 @@
   <body>
     <div class="container">
         <div id="app">
-            <h2>Send Money without any exchange fees!</h1>
+            <h2>MoneyWise</h2>
+            <h3>Send Money without any exchange fees!</h3>
             <hr>
             <form action="" class="form-inline">
+
                 <div class="form-group">
                     You send
-                    <input type="text" class="form-control" placeholder="100">
-                    <select class="form-control">
-                        <option value="usd">USD</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    Recipeint gets
-                    <input type="text" class="form-control" placeholder="100">
-                    <select class="form-control">
-                        <option value="NPR">NPR</option>
+                    <input type="text" class="form-control"  v-model="sourceAmount" @change="calculateTargetAmount">
+                    <select class="form-control" v-model="sourceCurrency" @change="calculateTargetAmount">
+                        <option  v-for="currency in currencies" :selected="currency" :value="currency">{{currency}}</option>
                     </select>
                 </div>
 
+                <div class="form-group">
+                    Recipeint gets
+                    <input type="text" class="form-control" v-model="targetAmount" @change="calculateSourceAmount">
+                    <select class="form-control" v-model="targetCurrency" @change="calculateSourceAmount">
+                        <option  v-for="currency in currencies" :selected="currency" :value="currency">{{currency}}</option>
+                    </select>
+                </div>
             </form>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.4/vue.min.js"></srcript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.4/vue.js"></script>
     <script>
-        vue = new Vue;
+        vue = new Vue({
+            el: "#app",
+            
+            data: {
+                sourceAmount: 100,
+                sourceCurrency: "USD",
+                targetAmount: 0,
+                targetCurrency: "EUR",
+                rate: 0.95,
+                currencies: []
+            },
+
+            methods : {
+                calculateTargetAmount: function() {
+                    this.fetchRate("source")
+                    this.targetAmount = this.updateAmount(this.sourceAmount)
+                },
+
+                calculateSourceAmount: function() {
+                    this.fetchRate("target")
+                    this.sourceAmount = this.updateAmount(this.targetAmount)
+                },
+
+                round: function round(value) {
+                    return value.toFixed(2)
+                },
+
+                updateAmount: function(amount) {
+                    return this.round(Math.abs(amount) * this.rate)
+                },
+
+                fetchCurrencies: function() {
+                    $.ajax({
+                        url: "http://localhost:9000/api/currencies",
+                        success: function(data){
+                            this.currencies = data.currencies.sort()
+                        }.bind(this)
+                    });
+                },
+
+                fetchRate: function(type) {
+                    $.ajax({
+                        url: "http://localhost:9000/api/rates",
+                        async: false,
+                        data: {
+                            calculationType: type, 
+                            sourceCurrency: this.sourceCurrency, 
+                            targetCurrency: this.targetCurrency
+                        },
+                        success: function(data){
+                            this.rate = data.rate
+                        }.bind(this)
+                    });
+                }
+            },
+
+            mounted() {
+                this.fetchCurrencies()
+                this.calculateTargetAmount()
+            }
+        });
     </script>
   </body>
 </html>
